infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: us.gcr.io/sonic-airfoil-447921-p3/expiration
          # for gcp
          resources:
            requests:
              cpu: "50m"
          # provide environment variables which will be accessible inside the container
