infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi", # hb = 'heart beat' - how often a server will make a request to the client
              "5s",
              "-hbt", # how much time each client has to respond to the healthcheck call from the server
              "5s",
              "-hbf", # how many times the client has to fail before the server assumes that the client is dead
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
      # this port as for monitoring, stats
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
